cli/src/tui/view/snapshots/snapshot_fans_section_pool_offline.snap
---
source: cli/src/tui/view/mod.rs
assertion_line: 2373
expression: buffer_to_string(&terminal)
---
Data  Scrub  Browse
 Pool ──────────────────────────────────────────────────────────────────
 not mounted
 Disks ─────────────────────────────────────────────────────────────────
     Name     Bus SMART Temp btrfs Allocated
 ▶ 1 toshiba  --
   2 ironwolf --
   3 wdc      --
   4 samsung  --
 Fans -- daemon: active ────────────────────────────────────────────────
    PWM           RPM    Driving        Curve
 1  215/255 84%   1240   38° ironwolf   30-40° -> 20-100%
Quit: q │ Help: ? │ Reset temp hi/lo: R │ Reload: r
