cli/src/tui/view/snapshots/snapshot_footer_duration_after_spinner.snap
---
source: cli/src/tui/view/mod.rs
expression: buffer_to_string(&terminal)
---
Data  Sharing
 Pool ──────────────────────────────────────────────────────
 Path       /mnt/storage
 Usage      29% 2.1 TiB / 7.3 TiB (Estimated)
 Type       Profile  Used       Allocated
 Data       RAID1    2.1 TiB    5.4 TiB
 Metadata   RAID1    1.5 GiB    2.0 GiB
 System     RAID1    0.0 MiB    16.0 MiB
 Disks ─────────────────────────────────────────────────────
     Name     Bus  SMART   Allocated
 ▶ 1 toshiba  sata ok      25%  1.4 / 5.5 TiB
   2 ironwolf sata warning 25%  1.4 / 5.5 TiB
   3 wdc      usb  -       21%  0.8 / 3.6 TiB
 Scrub ─────────────────────────────────────────────────────
 Last run     Tue Feb 24 02:00:07 2026 (11 min ago)
 Errors       0
 Total        32.36MiB
 Rate         32.34MiB/s
Quit: q │ Help: ? │ Reload: r (42ms)
