cli/src/tui/view/snapshots/snapshot_loading.snap
---
source: cli/src/tui/view/mod.rs
expression: buffer_to_string(&terminal)
---
Data  Sharing
 Pool ──────────────────────────────────────────────────────
 loading...
 Disks ─────────────────────────────────────────────────────
     Name     Bus SMART Power Allocated
 ▶ 1 toshiba  —         —
   2 ironwolf —         —
   3 wdc      —         —
Quit: q │ Help: ? │ Reload: r
