cli/src/tui/view/snapshots/snapshot_scrub_tab_not_mounted.snap
---
source: cli/src/tui/view/mod.rs
expression: buffer_to_string(&terminal)
---
Data  Scrub  Browse
 Scrub ─────────────────────────────────────────────────────
 not mounted
Quit: q │ Help: ? │ Reset temp hi/lo: R │ Reload: r
