cli/src/tui/view/snapshots/snapshot_scrub_tab_running.snap
---
source: cli/src/tui/view/mod.rs
assertion_line: 1558
expression: buffer_to_string(&terminal)
---
Data  Scrub  Sharing
 Scrub ─────────────────────────────────────────────────────
 Status       running (14.78%)
 Progress     82.1 GiB / 555.4 GiB
 Rate         234.8 MiB/s
 Time left    34m 24s
 ETA          Thu Apr 16 19:09:10 2026
 Errors       0
Quit: q │ Help: ? │ Reset temp hi/lo: R │ Reload: r
